--- a/sass_scss/103-sort_strings.scss
+++ b/sass_scss/103-sort_strings.scss
@@ -1,5 +1,15 @@
-/* Sorts the variable $list_to_sort and prints the sorted list in the debug output */
-
+// Import the list to be sorted
 @import '103-sort_list';
 
-@debug $list_to_sort;
+// Mixin to sort the list
+@mixin sort-list($list) {
+  $sorted-list: ();
+  @each $item in $list {
+    $sorted-list: append($sorted-list, $item);
+  }
+  $sorted-list: sort($sorted-list);
+  @debug $sorted-list;
+}
+
+// Apply the mixin to the list
+@include sort-list($list_to_sort);
